xml/test/corpus/errors.txt
================================================================================
Invalid comment
================================================================================

<error>
<!-- invalid -- -->
</error>

--------------------------------------------------------------------------------

(document
  (element
    (STag
      (Name))
    (content
      (CharData))
    (ERROR
      (Nmtoken)
      (Name)
      (Nmtoken)
      (Nmtoken))
    (ETag
      (Name))))

================================================================================
Invalid XML declaration
================================================================================

<?xml is invalid?>
<error/>

--------------------------------------------------------------------------------

(document
  (ERROR
    (Name)
    (Name))
  (element
    (EmptyElemTag
      (Name))))

================================================================================
Invalid processing instruction
================================================================================

<error>
<?bar is ?> invalid?>
</error>

--------------------------------------------------------------------------------

(document
  (element
    (STag
      (Name))
    (content
      (CharData))
    (ERROR
      (PITarget)
      (Name)
      (Name))
    (ETag
      (Name))))

================================================================================
Invalid character data (raw)
================================================================================

<raw>
This is not valid: ]]>
</raw>

--------------------------------------------------------------------------------

(document
  (element
    (STag
      (Name))
    (ERROR
      (Name)
      (Name)
      (Name)
      (Name))
    (ETag
      (Name))))

================================================================================
Invalid character data (CDATA)
================================================================================

<cdata>
<![CDATA[ ]]> is invalid ]]>
</cdata>

--------------------------------------------------------------------------------

(document
  (element
    (STag
      (Name))
    (content
      (CharData)
      (CDSect
        (CDStart)
        (CData)))
    (ERROR
      (Name)
      (Name))
    (ETag
      (Name))))

================================================================================
Mismatched tag name
================================================================================

<From>Jani</from>

--------------------------------------------------------------------------------

(ERROR
  (STag
    (Name))
  (content
    (CharData))
  (ERROR))
