xml/test/corpus/issues.txt
================================================================================
Empty CDATA (#7)
================================================================================

<field name="foo" type="text"><![CDATA[]]></field>

--------------------------------------------------------------------------------

(document
  (element
    (STag
      (Name)
      (Attribute
        (Name)
        (AttValue))
      (Attribute
        (Name)
        (AttValue)))
    (content
      (CDSect
        (CDStart)))
    (ETag
      (Name))))
